--- a/index.html
+++ b/index.html
@@ -1,74 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <div class="header">
-        <div class="container">
-            <div class="header__content">
-                <div class="header__content-logo">
-                    <img src="./img/" alt="header__logo" class="header__logo">
-                </div>
-                <div class="header__nav">
-                    <ul class="nav__list">
-                        <li class="nav__list-items">
-                            <a href="#" class="nav__list-item">Equipment</a>
-                        </li>
-                        <li class="nav__list-items">
-                            <a href="#" class="nav__list-item">About us</a>
-                        </li>
-                        <li class="nav__list-items">
-                            <a href="#" class="nav__list-item">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="header__account">
-                    <img src="./img/" alt="account-img" class="account-img">
-                    <a href="#" class="account__link">Account</a>
-                </div>
-            </div>
-            <div class="header__media">
-                <div class="header__media-content">
-                    <div class="header__content-text">
-                        <p class="header__media-text">Follow us</p>
-                    </div>
-                    <div class="header__content-img">
-                        <img src="./img/" alt="header__icon" class="header__icon">
-                        <img src="./img/" alt="header__icon" class="header__icon">
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="header__content">
+          <div class="header__content-logo">
+            <img src="./img/" alt="header__logo" class="header__logo" />
+          </div>
+          <div class="header__nav">
+            <ul class="nav__list">
+              <li class="nav__list-items">
+                <a href="#" class="nav__list-item">Equipment</a>
+              </li>
+              <li class="nav__list-items">
+                <a href="#" class="nav__list-item">About us</a>
+              </li>
+              <li class="nav__list-items">
+                <a href="#" class="nav__list-item">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="header__account">
+            <img src="./img/" alt="account-img" class="account-img" />
+            <a href="#" class="account__link">Account</a>
+          </div>
         </div>
+        <div class="header__media">
+          <div class="header__media-content">
+            <div class="header__content-text">
+              <p class="header__media-text">Follow us</p>
+            </div>
+            <div class="header__content-img">
+              <img src="./img/" alt="header__icon" class="header__icon" />
+              <img src="./img/" alt="header__icon" class="header__icon" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="content">
-        <div class="container">
-            <div class="content__start">
-                <div class="content__copy">
-                    <div class="content__title">
-                        <h2 class="content__title-number">
-                            01
-                        </h2>
-                        
-                    </div>
-                </div>
+      <div class="container">
+        <div class="content__start">
+          <div class="content__copy">
+            <div class="content__title">
+              <h2 class="content__title-number">01</h2>
+              <h2 class="content__title-subtitle">get started</h2>
+              <h2 class="content__title-title">What level of hiker are you?</h2>
             </div>
+            <div class="content__text">
+              <p class="content__text-text">
+                Determining what level of hiker you are can be an important tool
+                when planning future hikes. This hiking level guide will help
+                you plan hikes according to different hike ratings set by
+                various websites like All Trails and Modern Hiker. What type of
+                hiker are you – novice, moderate, advanced moderate, expert, or
+                expert backpacker?
+              </p>
+            </div>
+            <div class="content__link">
+                
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
-
-
-
-
-
-
-
-
-
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
