finish content html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="content">
       <div class="container">
-        <div class="content__start">
+        <div class="content__start content__content">
           <div class="content__copy">
             <div class="content__title">
               <h2 class="content__title-number">01</h2>
@@ -65,8 +65,90 @@
               </p>
             </div>
             <div class="content__link">
-                
+              <p class="content__link-text">read more</p>
+              <img
+                src="./img/"
+                alt="content__link-img"
+                class="content__link-img"
+              />
             </div>
+          </div>
+          <div class="content__img">
+            <img
+              src="./img/content/started.jpg"
+              alt="content__img-start"
+              class="content__img-start"
+            />
+          </div>
+        </div>
+        <div class="content__essential content__content">
+          <div class="content__img">
+            <img
+              src="./img/content/essentials.jpg"
+              alt="content__img-essential"
+              class="content__img-essential"
+            />
+          </div>
+          <div class="content__copy">
+            <div class="content__title">
+              <h2 class="content__title-number">02</h2>
+              <h2 class="content__title-subtitle">hiking essentials</h2>
+              <h2 class="content__title-title">
+                Picking the right Hiking Gear!
+              </h2>
+            </div>
+            <div class="content__text">
+              <p class="content__text-text">
+                The nice thing about beginning hiking is that you don't really
+                did any spacial gear, you can probably get away with things you
+                already have. <br />
+                Let's start with clothing. A typical mistake hiking beginners
+                make is wearing jeans and regular clothes, wich will get heavy
+                and chafe wif they get sweaty or wet.
+              </p>
+            </div>
+            <div class="content__link">
+              <p class="content__link-text">read more</p>
+              <img
+                src="./img/"
+                alt="content__link-img"
+                class="content__link-img"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="content__key content__content">
+          <div class="content__copy">
+            <div class="content__title">
+              <h2 class="content__title-number">03</h2>
+              <h2 class="content__title-subtitle">where you go is the key</h2>
+              <h2 class="content__title-title">Understand your map & timing</h2>
+            </div>
+            <div class="content__text">
+              <p class="content__text-text">
+                To start, print out the hiking guide and map. If it's raining,
+                throw them in a Zip-LOck bag. Read over the guide, study the
+                map, and have a good idea of what to expect. I like to know what
+                my next landmark is as I hike. For example, I'll read the guide
+                and know that say, in a mile, I make a right turn at the
+                junction.
+              </p>
+            </div>
+            <div class="content__link">
+              <p class="content__link-text">read more</p>
+              <img
+                src="./img/"
+                alt="content__link-img"
+                class="content__link-img"
+              />
+            </div>
+          </div>
+          <div class="content__img">
+            <img
+              src="./img/content/key.jpg"
+              alt="content__img-key"
+              class="content__img-key"
+            />
           </div>
         </div>
       </div>
